update comment lan 2

--- a/force-app/main/default/classes/SiteRegisterController.cls
+++ b/force-app/main/default/classes/SiteRegisterController.cls
@@ -19,6 +19,7 @@ public with sharing class SiteRegisterController {
         return password == confirmPassword;
     }
     // Nguyen Hung comment at here
+    // Comment lafn 2
     
     public PageReference registerUser() {
         // it's okay if password is null - we'll send the user a random password in that case
