update return false

--- a/force-app/main/default/classes/HunaTest.cls
+++ b/force-app/main/default/classes/HunaTest.cls
@@ -3,6 +3,6 @@ public with sharing class HunaTest {
 
     }
     private Boolean isDepZai() {
-        return true;
+        return false;
     }
 }
