--- a/force-app/main/default/classes/HunaTest.cls
+++ b/force-app/main/default/classes/HunaTest.cls
@@ -5,4 +5,7 @@ public with sharing class HunaTest {
     private Boolean isDepZai() {
         return false;
     }
+    private String okBaby() {
+        return '';
+    }
 }
