update class huna test

--- a/force-app/main/default/classes/HunaTest.cls
+++ b/force-app/main/default/classes/HunaTest.cls
@@ -2,7 +2,12 @@ public with sharing class HunaTest {
     private Boolean isDepZai() {
         return true;
     }
+    
     private String okBaby() {
         return 'toi la dan choi';
+    }
+
+    public string antTool() {
+        return 'ant';
     }
 }
